# OpenAI-Agents-SDK

./: ### Step-by-Step Guide to Dockerize.txt  .env  00_OpenAI_Agents_SDK.ipynb  OpenAI_Agents_SDK.ipynb  README.md
-01_notebooks_file(.ipynb)/: .env  00_openrouter_integration_process.ipynb  01_litellm_implementation.ipynb  02_multi_conversation.ipynb  03_Sync_and_Async.ipynb  04_streaming.ipynb  05_Agent_as_tools.ipynb  06_tools.ipynb  07_Handoffs.ipynb  08_context.ipynb  Source.img
-01_notebooks_file(.ipynb)/09_Guardrails/: 02_multi_conversation.ipynb  README.md  example1.ipynb  example2.ipynb
-01_notebooks_file(.ipynb)/10_Multi_agent_system_with_tools/: .env  Agents.ipynb  Source.gv
00_OpenAI_Agents_SDK(All Concepts)/: 00_OpenAI_Agents_SDK.ipynb
00_Quiz_preparation/: config.py
00_Quiz_preparation/01_syncronous&asyncronous/: 01_Quiz_preparation(Sync & Async).ipynb
00_Quiz_preparation/02_life_cycle_events_logs/: agents_lifecycle.py  run_lifecycle.py
00_Quiz_preparation/03_functions_inner/: custom_function.py
01_simple_bot/: .env.example  app.py  chainlit.md  pyproject.toml
02_Python_Syntex(New Features)/: 01_dataclass_explained.ipynb  02_Generics_Uses.ipynb  GENERICS.md  dataclass.md
03_Agents(With Streaming)/: .env_example  pyproject.toml
04_Multi_AI_Agent/: .env  My_Agent.py  pyproject.toml
05_Multi_AI_Agent/: .env  .env.example  Dockerfile  My_Agent.py  chainlit.yaml  requirements.txt
PIAIC_Q3/: Q3 class 1..txt  Q3 class 1.md
simple-agent/: .env  agent.py  pyproject.toml  simple1.py  streaming.py  streaming_agent.py
(+35 files in other folders)
